# render_pipeline_cpp

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  LICENSE-thirdparty.md  LICENSE.md  README.md  appveyor.yml  azure-pipelines.yml  files.cmake  thridparty-licenses.md
src/rpassimp/: CMakeLists.txt  assimpLoader.cxx  assimpLoader.h  config_assimp.cxx  config_assimp.h  files.cmake  loaderFileTypeAssimp.cxx  loaderFileTypeAssimp.h  pandaIOStream.cxx  pandaIOStream.h  pandaIOSystem.cxx  pandaIOSystem.h  pandaLogger.cxx  pandaLogger.h
src/rpplugins/: CMakeLists.txt  README.md  rpplugin-config.cmake.in  rpplugin_build.cmake  rpplugin_install.cmake  rpplugins_build.cmake  rpplugins_install.cmake
src/rpplugins/ao/: CMakeLists.txt
src/rpplugins/ao/resources/: config.yaml
src/rpplugins/ao/shader/: small_scale_ao.frag.glsl
src/rpplugins/ao/src/: ao_stage.cpp  ao_stage.hpp  plugin.cpp  plugin.hpp
src/rpplugins/bloom/: CMakeLists.txt  config.yaml
src/rpplugins/bloom/shader/: bloom_downsample.frag.glsl  bloom_upsample.frag.glsl  remove_fireflies.frag.glsl
src/rpplugins/bloom/src/: bloom_stage.cpp  bloom_stage.hpp  plugin.cpp  plugin.hpp
src/rpplugins/clouds/: CMakeLists.txt  config.yaml
src/rpplugins/clouds/src/: apply_clouds_stage.cpp  apply_clouds_stage.h  apply_clouds_stage.hpp  plugin.cpp  plugin.hpp
src/rpplugins/color_correction/: CMakeLists.txt
src/rpplugins/color_correction/resources/: config.yaml
src/rpplugins/color_correction/shader/: analyze_brightness.frag.glsl  apply_exposure.frag.glsl  apply_tonemap.frag.glsl  generate_luminance.frag.glsl  manual_exposure.frag.glsl
src/rpplugins/color_correction/src/: auto_exposure_stage.cpp  auto_exposure_stage.h  auto_exposure_stage.hpp  color_correction_stage.cpp  color_correction_stage.h  color_correction_stage.hpp  manual_exposure_stage.cpp  manual_exposure_stage.h  manual_exposure_stage.hpp  plugin.cpp  plugin.hpp  sharpen_stage.cpp  sharpen_stage.h  sharpen_stage.hpp  tonemapping_stage.cpp  tonemapping_stage.h  tonemapping_stage.hpp
src/rpplugins/dof/: CMakeLists.txt  config.yaml
src/rpplugins/dof/src/: dof_stage.cpp  dof_stage.h  dof_stage.hpp  plugin.cpp  plugin.hpp
src/rpplugins/env_probes/: CMakeLists.txt  files.cmake
src/rpplugins/env_probes/cmake/: rpplugin_env_probes-macro.cmake.in
src/rpplugins/env_probes/include/: env_probes_plugin.hpp
src/rpplugins/env_probes/resources/: config.yaml
src/rpplugins/env_probes/shader/: apply_envprobes.frag.glsl  cull_probes.frag.glsl  generate_mip_shaders.py
src/rpplugins/env_probes/src/: apply_envprobes_stage.cpp  apply_envprobes_stage.h  apply_envprobes_stage.hpp  cull_probes_stage.cpp  cull_probes_stage.h  cull_probes_stage.hpp  env_probes_plugin.cpp  environment_capture_stage.cpp  environment_capture_stage.h  environment_capture_stage.hpp  environment_probe.cpp  environment_probe.h  environment_probe.hpp  probe_manager.cpp  probe_manager.h  probe_manager.hpp
src/rpplugins/forward_shading/: CMakeLists.txt
src/rpplugins/forward_shading/resources/: config.yaml
src/rpplugins/forward_shading/shader/: merge_with_deferred.frag.glsl
src/rpplugins/forward_shading/src/: forward_stage.cpp  forward_stage.h  forward_stage.hpp  plugin.cpp  plugin.hpp
src/rpplugins/imgui/: CMakeLists.txt  README.md  config.yaml  files.cmake
src/rpplugins/imgui/shader/: imgui.frag.glsl  imgui.vert.glsl
src/rpplugins/imgui/src/: plugin.cpp
src/rpplugins/motion_blur/: CMakeLists.txt
src/rpplugins/motion_blur/resources/: config.yaml
src/rpplugins/motion_blur/src/: motion_blur_stage.cpp  motion_blur_stage.h  motion_blur_stage.hpp  plugin.cpp  plugin.hpp
src/rpplugins/openvr/: CMakeLists.txt  config.yaml
src/rpplugins/openvr/cmake/: FindOpenVR.cmake  FindPackages.cmake
src/rpplugins/openvr/include/: openvr_plugin.hpp
src/rpplugins/openvr/resources/: config.yaml
src/rpplugins/openvr/shader/: openvr_render.frag.glsl
src/rpplugins/openvr/src/: openvr_plugin.cpp  openvr_render_stage.cpp  openvr_render_stage.h  openvr_render_stage.hpp
src/rpplugins/pssm/: CMakeLists.txt  config.yaml
src/rpplugins/pssm/cmake/: rpplugin_pssm-macro.cmake.in
src/rpplugins/pssm/include/: pssm_plugin.hpp
src/rpplugins/pssm/shader/: apply_sun_shading.frag.glsl  filter_pssm_shadows.frag.glsl
src/rpplugins/pssm/src/: pssm_dist_shadow_stage.cpp  pssm_dist_shadow_stage.h  pssm_dist_shadow_stage.hpp  pssm_plugin.cpp  pssm_scene_shadow_stage.cpp  pssm_scene_shadow_stage.h  pssm_scene_shadow_stage.hpp  pssm_shadow_stage.cpp  pssm_shadow_stage.h  pssm_shadow_stage.hpp  pssm_stage.cpp  pssm_stage.h  pssm_stage.hpp
src/rpplugins/rpstat/: CMakeLists.txt  README.md  config.yaml  files.cmake
src/rpplugins/rpstat/src/: actor_window.cpp  actor_window.hpp  anim_control_window.cpp  anim_control_window.hpp  day_manager_window.cpp  day_manager_window.hpp  dialog.cpp  dialog.hpp  file_dialog.cpp  file_dialog.hpp  import_model_dialog.cpp  import_model_dialog.hpp  load_animation_dialog.cpp  load_animation_dialog.hpp  material_window.cpp  material_window.hpp  nodepath_window.cpp  nodepath_window.hpp  plugin.cpp  scenegraph_window.cpp  scenegraph_window.hpp  texture_window.cpp  texture_window.hpp  window_interface.cpp  window_interface.hpp
src/rpplugins/scattering/: CMakeLists.txt
src/rpplugins/scattering/include/: scattering_plugin.hpp
src/rpplugins/scattering/resources/: config.yaml
src/rpplugins/scattering/shader/: apply_scattering.frag.glsl  scattering_envmap.frag.glsl
src/rpplugins/scattering/src/: godray_stage.cpp  godray_stage.h  godray_stage.hpp  scattering_envmap_stage.cpp  scattering_envmap_stage.h  scattering_envmap_stage.hpp  scattering_methods.cpp  scattering_methods.h  scattering_methods.hpp  scattering_plugin.cpp  scattering_stage.cpp  scattering_stage.h  (+1 more)
src/rpplugins/skin_shading/: CMakeLists.txt
src/rpplugins/sky_ao/: CMakeLists.txt
src/rpplugins/smaa/: CMakeLists.txt
src/rpplugins/ssr/: CMakeLists.txt  config.yaml
src/rpplugins/volumetrics/: CMakeLists.txt  config.yaml
src/rpplugins/vxgi/: CMakeLists.txt  config.yaml
(+579 files in other folders)
